crates/stef-go/tests/snapshots/render__render@alias_basic.stef.snap
---
source: crates/stef-go/tests/render.rs
description: "/// Sample type alias.\ntype Sample = u32;"
input_file: crates/stef-parser/tests/inputs/alias_basic.stef
---
--- sample.go

// Code generated by stef-go (v0.1.0). DO NOT EDIT.

import (
	"github.com/dnaka91/stef-go"
	"github.com/dnaka91/stef-go/buf"
)

package sample

// Sample type alias.
type Sample uint32
