crates/stef-go/tests/snapshots/render__render@const_basic.stef.snap
---
source: crates/stef-go/tests/render.rs
description: "const BOOL_TRUE: bool = true;\nconst BOOL_FALSE: bool = false;\nconst INT: u32 = 100;\nconst FLOAT: f64 = 5.5;\nconst STRING: string = \"value\";\nconst BYTES: bytes = [1, 2, 3];"
input_file: crates/stef-parser/tests/inputs/const_basic.stef
---
--- sample.go

// Code generated by stef-go (v0.1.0). DO NOT EDIT.

import (
	"github.com/dnaka91/stef-go"
	"github.com/dnaka91/stef-go/buf"
)

package sample

const BoolTrue bool = true
const BoolFalse bool = false
const Int uint32 = 100
const Float float64 = 5.5
const String string = "value"
var Bytes []byte = []byte{1, 2, 3}

